k8s/manifests-d02bc6/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-d02bc6
  namespace: journee
  labels:
    app: journee-d02bc6
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-d02bc6
  template:
    metadata:
      labels:
        app: journee-d02bc6
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-d02bc6
          image: gcr.io/my-docker-471807/journee:v6.0.0
          ports:
            - containerPort: 3000
