k8s/manifests-d02bc6/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-d02bc6
  namespace: journee
spec:
  selector:
    app: journee-d02bc6
  ports:
    - port: 80
      targetPort: 3000
